--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,11 @@
   text-align: center;
 }
 
+ *,html,body{
+  margin:0;
+  padding: 0;
+}
+
 .logo {
 
   transition: filter 300ms;
@@ -38,7 +43,6 @@
 .read-the-docs {
   color: #888;
 }
-
 
 
 :root {
