--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -1,5 +1,8 @@
+ .container-form{
+   margin: 20px 0px;
+   padding: 30px 0px;
+}
 .formcontacto{
-
     margin-top: 3rem;
  }
 
@@ -19,6 +22,7 @@ button {
    font-family: "Montserrat-Regular";
    color: #fff;
    font-size: 15px;
+   text-align: center;
 }
 
 .formcontacto p,
@@ -101,6 +105,7 @@ ul {
    font-size: 15px;
    color: #ffffff;
    position: absolute;
+   text-align: center;
    top: 11px;
    transition: all .2s ease;
    transform-origin: 0 0;
@@ -254,3 +259,23 @@ ul {
   
 
 }
+
+/* ---------------MEDIA QUERIES--------------- */
+
+/* @media (max-width:320px) {
+   
+} */
+
+@media (min-width:321px) and (max-width:768px){
+
+   .container-form{
+      margin:10px;
+   }
+   .inner h3{
+      font-size: large;
+   }
+}
+
+/* @media (min-width:769px){
+
+}*/
