--- a/src/components/Ofertas.css
+++ b/src/components/Ofertas.css
@@ -140,6 +140,7 @@
    .titulo-semillas{
       margin: 10px 0;
       padding: 15px 0px;
+      margin-bottom: -6em;
    }
 
    .titulo-semillas h2{
